
[workspace]
members = ["badge", "crates/button"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.5", features = [
    "unproven",
] }
fugit = "0.3.7"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.10.2"
display-interface = "0.4.1"
pio = "0.2.1"
pio-proc = "0.2.2"
pimoroni-tufty2040 = "0.1.0"
nb = "1.1"
panic-halt = "0.2.0"
st7789 = "0.6.1"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
tinybmp = "0.4.0"
embedded-graphics = "=0.7.1"
embedded-graphics-core = "=0.3.3"
itoa = "1.0.11"
button = { path = "./crates/button" }
